# github-agent-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/hooks/: auto-commit.json  auto-commit.ps1
prompts/: coder.md  planner.md  pr_writer.md  scout.md  validator.md
src/: __init__.py  cli.py  config.py  github_client.py  llm_client.py  main.py  repo_manager.py
src/agents/: __init__.py  coder.py  planner.py  pr_writer.py  scout.py  validator.py
src/workflows/: __init__.py  analyze_repo.py  apply_patch.py  discover_tasks.py  generate_patch.py  pr_draft.py  publish_client.py  publish_result.py  run_task.py  task_planning.py  validate_patch.py
tests/: test_discover_tasks.py  test_github_client_publish.py  test_llm_client.py  test_llm_integration.py  test_publish_cli.py  test_publish_client.py  test_publish_docs.py  test_publish_pr.py  test_publish_prepare.py  test_publish_push.py  test_publish_workflow.py  test_smoke.py
